<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/portfolio_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PortfolioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/portfolio_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_tomorrow" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_name"
            app:srcCompat="@android:drawable/bottom_bar"
            app:tint="?attr/colorControlNormal" />

        <Button
            android:id="@+id/portfolio_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:foreground="@drawable/ic_add_white_24dp"
            android:theme="@style/Widget.Design.FloatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_recycler" />

        <TextView
            android:id="@+id/portfolio_name"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/portfolio_ticker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/portfolio_ticker"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/tick"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/portfolio_tomorrow"
            app:layout_constraintStart_toEndOf="@+id/portfolio_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/portfolio_month"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/one_month"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/portfolio_two_weeks"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/portfolio_two_weeks"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/two_weeks"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/portfolio_month"
            app:layout_constraintStart_toEndOf="@+id/portfolio_tomorrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/portfolio_tomorrow"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/next"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/portfolio_two_weeks"
            app:layout_constraintStart_toEndOf="@+id/portfolio_ticker"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/portfolio_progressbar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolio_tomorrow" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>