<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/price_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PriceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/soft_data_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:tag="date"
        style="@style/text_style"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/soft_data_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_symbol" />

    <TextView
        android:id="@+id/soft_data_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="open"
        android:text="@string/open"
        style="@style/text_style"
        app:layout_constraintEnd_toStartOf="@+id/soft_data_close"
        app:layout_constraintStart_toEndOf="@+id/soft_data_date"
        app:layout_constraintTop_toTopOf="@+id/soft_data_date" />


    <TextView
        android:id="@+id/soft_data_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="close"
        android:text="@string/close"
        style="@style/text_style"
        app:layout_constraintEnd_toStartOf="@+id/soft_data_volume"
        app:layout_constraintStart_toEndOf="@+id/soft_data_open"
        app:layout_constraintTop_toTopOf="@+id/soft_data_date" />

    <TextView
        android:id="@+id/soft_data_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:tag="volume"
        android:text="@string/volume"
        style="@style/text_style"
        android:textIsSelectable="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/soft_data_close"
        app:layout_constraintTop_toTopOf="@+id/soft_data_date" />


    <TextView
        android:id="@+id/stock_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        style="@style/text_style"
        app:layout_constraintEnd_toStartOf="@+id/stock_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stock_name"
        tools:text="SYMBOL" />

    <TextView
        android:id="@+id/stock_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/text_style"
        app:layout_constraintEnd_toStartOf="@+id/stock_marketexchange"
        app:layout_constraintStart_toEndOf="@+id/stock_symbol"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="NAME" />

    <TextView
        android:id="@+id/stock_marketexchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_style"
        app:layout_constraintEnd_toStartOf="@+id/stock_ipoyear"
        app:layout_constraintStart_toEndOf="@+id/stock_name"
        app:layout_constraintTop_toTopOf="@+id/stock_name"
        tools:text="MARKET CAP" />

    <TextView
        android:id="@+id/stock_ipoyear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stock_marketexchange"
        app:layout_constraintTop_toTopOf="@+id/stock_name"
        tools:text="IPO YEAR" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:tint="?attr/colorControlNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/bottom_bar"
            app:layout_constraintTop_toBottomOf="@+id/soft_data_volume"
             />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stock_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>